--- a/example/package.json
+++ b/example/package.json
@@ -3,7 +3,8 @@
   "devDependencies": {
     "chai": "^4.1.0",
     "protractor": "^5.1.2",
-    "protractor-cucumber-framework": "^3.1.2"
+    "protractor-cucumber-framework": "^3.1.2",
+    "show-and-tell": "^0.1.0"
   },
   "scripts": {
     "test": "./node_modules/protractor/bin/protractor protractor.conf.js",
